--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     top:50%;
     transform: translateY(-50%);
     font-size: 2rem;
-    font-weight: bolder;
+    font-weight: 800;
     background-color: rgba(255, 255, 255, 0.267);
     z-index: 1;
     width: 40px;
