--- a/style.css
+++ b/style.css
@@ -58,3 +58,25 @@
     aspect-ratio: 16/9;
     object-fit: cover;
 }
+.carousel-nav{
+    width: 100%;
+    height: 30px;
+    /* background-color: rgba(255, 255, 255, 0.26); */
+    position: absolute;
+    z-index: 2;
+    bottom:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.dots{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.692);
+    cursor: pointer;
+}
+.dots.active{
+    background-color: rgba(0, 0, 0, 0.384);
+}
